[gd_scene load_steps=4 format=2]

[ext_resource path="res://environment/platforms/OneWayPlatform.gd" type="Script" id=1]
[ext_resource path="res://environment/platforms/platforms.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 10 )

[node name="OneWayPlatform" type="StaticBody2D"]
collision_layer = 15360
collision_mask = 16
script = ExtResource( 1 )

[node name="LeftEnd" type="Sprite" parent="."]

[node name="RightEnd" type="Sprite" parent="."]
position = Vector2( 32, 0 )

[node name="MidTemplate" type="Sprite" parent="."]
visible = false
position = Vector2( 32, 0 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 32, 0, 32, 8 )

[node name="MidPieces" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 0 )
shape = SubResource( 1 )
one_way_collision = true
